Added create account

--- a/Asp.netIdentityApi/Asp.netIdentityApi.csproj
+++ b/Asp.netIdentityApi/Asp.netIdentityApi.csproj
@@ -15,5 +15,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Asp.netShared\Asp.netShared.csproj" />
+  </ItemGroup>
+
 
 </Project>
